RESOLVED FIXED151831
Hook up request and show for typing candidates in WK1
https://bugs.webkit.org/show_bug.cgi?id=151831
Summary Hook up request and show for typing candidates in WK1
Beth Dakin
Reported 2015-12-03 15:27:27 PST
Hook up request and show for typing candidates in WK1 rdar://problem/23751214
Attachments
Patch (19.30 KB, patch)
2015-12-03 15:42 PST, Beth Dakin
no flags
Patch (19.33 KB, patch)
2015-12-03 15:54 PST, Beth Dakin
enrica: review+
Beth Dakin
Comment 1 2015-12-03 15:42:56 PST
WebKit Commit Bot
Comment 2 2015-12-03 15:44:53 PST
Attachment 266569 [details] did not pass style-queue: ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1138: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1189: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3 2015-12-03 15:54:22 PST
WebKit Commit Bot
Comment 4 2015-12-03 15:56:26 PST
Attachment 266571 [details] did not pass style-queue: ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1138: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1189: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 5 2015-12-07 12:20:57 PST
Comment on attachment 266571 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=266571&action=review The patch looks good to me. > Source/WebCore/page/EditorClient.h:191 > + virtual int requestCandidatesForSelection(const VisibleSelection&) = 0; Why having an int return type since the only place this is called in Editor doesn't check the return value?
Beth Dakin
Comment 6 2015-12-07 12:37:59 PST
(In reply to comment #5) > Comment on attachment 266571 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=266571&action=review > > The patch looks good to me. > > > Source/WebCore/page/EditorClient.h:191 > > + virtual int requestCandidatesForSelection(const VisibleSelection&) = 0; > > Why having an int return type since the only place this is called in Editor > doesn't check the return value? Thanks Enrica! I removed the return value. http://trac.webkit.org/changeset/193645
Note You need to log in before you can comment on or make changes to this bug.